--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Bhuvan's Personal Site</title>
-</head>
+<link rel="stylesheet" href="css/styles.css">
 <body>
   <table cellspacing="20">
     <tr>
@@ -68,229 +68,69 @@
       <td><table cellspacing="10">
         <tr>
           <td>Bootstrap Framework</td>
-          <td><img src="https://lh3.googleusercontent.com/proxy/R0FHiiUBaLlpkAgH5x06icTJjbPGtRxv4RVU8pk3pQsdFow9nS5EDihFz4_p2f2JrjoPYalRpa_WbudAZR3v1AmITA8o4Pc
-    " alt="Star" width="30" height="30">
-    <img src="https://lh3.googleusercontent.com/proxy/R0FHiiUBaLlpkAgH5x06icTJjbPGtRxv4RVU8pk3pQsdFow9nS5EDihFz4_p2f2JrjoPYalRpa_WbudAZR3v1AmITA8o4Pc
-    " alt="Star" width="30" height="30">
-    <img src="https://lh3.googleusercontent.com/proxy/R0FHiiUBaLlpkAgH5x06icTJjbPGtRxv4RVU8pk3pQsdFow9nS5EDihFz4_p2f2JrjoPYalRpa_WbudAZR3v1AmITA8o4Pc
-    " alt="Star" width="30" height="30">
-    <img src="https://clipartart.com/images/clipart-star-image-14.png
-    " alt="Star" width="30" height="30">
-    <img src="https://clipartart.com/images/clipart-star-image-14.png
-    " alt="Star" width="30" height="30">
-     </td>
+          <td>⭐⭐⭐</td>
         </tr>
     <tr>
       <td>CSS(3)</td>
-      <td><img src="https://lh3.googleusercontent.com/proxy/R0FHiiUBaLlpkAgH5x06icTJjbPGtRxv4RVU8pk3pQsdFow9nS5EDihFz4_p2f2JrjoPYalRpa_WbudAZR3v1AmITA8o4Pc
-    " alt="Star" width="30" height="30">
-    <img src="https://lh3.googleusercontent.com/proxy/R0FHiiUBaLlpkAgH5x06icTJjbPGtRxv4RVU8pk3pQsdFow9nS5EDihFz4_p2f2JrjoPYalRpa_WbudAZR3v1AmITA8o4Pc
-    " alt="Star" width="30" height="30">
-    <img src="https://lh3.googleusercontent.com/proxy/R0FHiiUBaLlpkAgH5x06icTJjbPGtRxv4RVU8pk3pQsdFow9nS5EDihFz4_p2f2JrjoPYalRpa_WbudAZR3v1AmITA8o4Pc
-    " alt="Star" width="30" height="30">
-    <img src="https://clipartart.com/images/clipart-star-image-14.png
-    " alt="Star" width="30" height="30">
-    <img src="https://clipartart.com/images/clipart-star-image-14.png
-    " alt="Star" width="30" height="30">
-    </td>
+      <td>⭐⭐⭐⭐⭐</td>
     </tr>
     <tr>
       <td>HTML(5)</td>
-      <td><img src="https://lh3.googleusercontent.com/proxy/R0FHiiUBaLlpkAgH5x06icTJjbPGtRxv4RVU8pk3pQsdFow9nS5EDihFz4_p2f2JrjoPYalRpa_WbudAZR3v1AmITA8o4Pc
-    " alt="Star" width="30" height="30">
-    <img src="https://lh3.googleusercontent.com/proxy/R0FHiiUBaLlpkAgH5x06icTJjbPGtRxv4RVU8pk3pQsdFow9nS5EDihFz4_p2f2JrjoPYalRpa_WbudAZR3v1AmITA8o4Pc
-    " alt="Star" width="30" height="30">
-    <img src="https://clipartart.com/images/clipart-star-image-14.png
-    " alt="Star" width="30" height="30">
-    <img src="https://clipartart.com/images/clipart-star-image-14.png
-    " alt="Star" width="30" height="30">
-    <img src="https://clipartart.com/images/clipart-star-image-14.png
-    " alt="Star" width="30" height="30">
-    </td>
+      <td>⭐⭐</td>
     </tr>
     <tr>
       <td>JSON</td>
-      <td><img src="https://lh3.googleusercontent.com/proxy/R0FHiiUBaLlpkAgH5x06icTJjbPGtRxv4RVU8pk3pQsdFow9nS5EDihFz4_p2f2JrjoPYalRpa_WbudAZR3v1AmITA8o4Pc
-    " alt="Star" width="30" height="30">
-    <img src="https://lh3.googleusercontent.com/proxy/R0FHiiUBaLlpkAgH5x06icTJjbPGtRxv4RVU8pk3pQsdFow9nS5EDihFz4_p2f2JrjoPYalRpa_WbudAZR3v1AmITA8o4Pc
-    " alt="Star" width="30" height="30">
-    <img src="https://lh3.googleusercontent.com/proxy/R0FHiiUBaLlpkAgH5x06icTJjbPGtRxv4RVU8pk3pQsdFow9nS5EDihFz4_p2f2JrjoPYalRpa_WbudAZR3v1AmITA8o4Pc
-    " alt="Star" width="30" height="30">
-    <img src="https://lh3.googleusercontent.com/proxy/R0FHiiUBaLlpkAgH5x06icTJjbPGtRxv4RVU8pk3pQsdFow9nS5EDihFz4_p2f2JrjoPYalRpa_WbudAZR3v1AmITA8o4Pc
-    " alt="Star" width="30" height="30">
-    <img src="https://clipartart.com/images/clipart-star-image-14.png
-    " alt="Star" width="30" height="30">
-    </td>
+      <td>⭐⭐⭐⭐</td>
     </tr>
     <tr>
       <td>MySQL</td>
-      <td><img src="https://lh3.googleusercontent.com/proxy/R0FHiiUBaLlpkAgH5x06icTJjbPGtRxv4RVU8pk3pQsdFow9nS5EDihFz4_p2f2JrjoPYalRpa_WbudAZR3v1AmITA8o4Pc
-    " alt="Star" width="30" height="30">
-    <img src="https://lh3.googleusercontent.com/proxy/R0FHiiUBaLlpkAgH5x06icTJjbPGtRxv4RVU8pk3pQsdFow9nS5EDihFz4_p2f2JrjoPYalRpa_WbudAZR3v1AmITA8o4Pc
-    " alt="Star" width="30" height="30">
-    <img src="https://lh3.googleusercontent.com/proxy/R0FHiiUBaLlpkAgH5x06icTJjbPGtRxv4RVU8pk3pQsdFow9nS5EDihFz4_p2f2JrjoPYalRpa_WbudAZR3v1AmITA8o4Pc
-    " alt="Star" width="30" height="30">
-    <img src="https://clipartart.com/images/clipart-star-image-14.png
-    " alt="Star" width="30" height="30">
-    <img src="https://clipartart.com/images/clipart-star-image-14.png
-    " alt="Star" width="30" height="30">
-    </td>
+      <td>⭐</td>
     </tr>
     <tr>
       <td>Javascript</td>
-      <td><img src="https://lh3.googleusercontent.com/proxy/R0FHiiUBaLlpkAgH5x06icTJjbPGtRxv4RVU8pk3pQsdFow9nS5EDihFz4_p2f2JrjoPYalRpa_WbudAZR3v1AmITA8o4Pc
-    " alt="Star" width="30" height="30">
-    <img src="https://lh3.googleusercontent.com/proxy/R0FHiiUBaLlpkAgH5x06icTJjbPGtRxv4RVU8pk3pQsdFow9nS5EDihFz4_p2f2JrjoPYalRpa_WbudAZR3v1AmITA8o4Pc
-    " alt="Star" width="30" height="30">
-    <img src="https://lh3.googleusercontent.com/proxy/R0FHiiUBaLlpkAgH5x06icTJjbPGtRxv4RVU8pk3pQsdFow9nS5EDihFz4_p2f2JrjoPYalRpa_WbudAZR3v1AmITA8o4Pc
-    " alt="Star" width="30" height="30">
-    <img src="https://clipartart.com/images/clipart-star-image-14.png
-    " alt="Star" width="30" height="30">
-    <img src="https://clipartart.com/images/clipart-star-image-14.png
-    " alt="Star" width="30" height="30">
-    </td>
+      <td>⭐⭐⭐⭐⭐</td>
     </tr>
     <tr>
       <td>Laravel Framework</td>
-      <td><img src="https://lh3.googleusercontent.com/proxy/R0FHiiUBaLlpkAgH5x06icTJjbPGtRxv4RVU8pk3pQsdFow9nS5EDihFz4_p2f2JrjoPYalRpa_WbudAZR3v1AmITA8o4Pc
-    " alt="Star" width="30" height="30">
-    <img src="https://lh3.googleusercontent.com/proxy/R0FHiiUBaLlpkAgH5x06icTJjbPGtRxv4RVU8pk3pQsdFow9nS5EDihFz4_p2f2JrjoPYalRpa_WbudAZR3v1AmITA8o4Pc
-    " alt="Star" width="30" height="30">
-    <img src="https://lh3.googleusercontent.com/proxy/R0FHiiUBaLlpkAgH5x06icTJjbPGtRxv4RVU8pk3pQsdFow9nS5EDihFz4_p2f2JrjoPYalRpa_WbudAZR3v1AmITA8o4Pc
-    " alt="Star" width="30" height="30">
-    <img src="https://lh3.googleusercontent.com/proxy/R0FHiiUBaLlpkAgH5x06icTJjbPGtRxv4RVU8pk3pQsdFow9nS5EDihFz4_p2f2JrjoPYalRpa_WbudAZR3v1AmITA8o4Pc
-    " alt="Star" width="30" height="30">
-    <img src="https://clipartart.com/images/clipart-star-image-14.png
-    " alt="Star" width="30" height="30">
-    </td>
+      <td>⭐⭐⭐</td>
     </tr>
     <tr>
       <td>JQuery</td>
-      <td><img src="https://lh3.googleusercontent.com/proxy/R0FHiiUBaLlpkAgH5x06icTJjbPGtRxv4RVU8pk3pQsdFow9nS5EDihFz4_p2f2JrjoPYalRpa_WbudAZR3v1AmITA8o4Pc
-    " alt="Star" width="30" height="30">
-    <img src="https://lh3.googleusercontent.com/proxy/R0FHiiUBaLlpkAgH5x06icTJjbPGtRxv4RVU8pk3pQsdFow9nS5EDihFz4_p2f2JrjoPYalRpa_WbudAZR3v1AmITA8o4Pc
-    " alt="Star" width="30" height="30">
-    <img src="https://clipartart.com/images/clipart-star-image-14.png
-    " alt="Star" width="30" height="30">
-    <img src="https://clipartart.com/images/clipart-star-image-14.png
-    " alt="Star" width="30" height="30">
-    <img src="https://clipartart.com/images/clipart-star-image-14.png
-    " alt="Star" width="30" height="30">
-    </td>
+      <td>⭐⭐</td>
     </tr>
       </table></td>
       <td><table cellspacing="10">
         <tr>
           <td>BEM</td>
-          <td><img src="https://lh3.googleusercontent.com/proxy/R0FHiiUBaLlpkAgH5x06icTJjbPGtRxv4RVU8pk3pQsdFow9nS5EDihFz4_p2f2JrjoPYalRpa_WbudAZR3v1AmITA8o4Pc
-    " alt="Star" width="30" height="30">
-    <img src="https://lh3.googleusercontent.com/proxy/R0FHiiUBaLlpkAgH5x06icTJjbPGtRxv4RVU8pk3pQsdFow9nS5EDihFz4_p2f2JrjoPYalRpa_WbudAZR3v1AmITA8o4Pc
-    " alt="Star" width="30" height="30">
-    <img src="https://lh3.googleusercontent.com/proxy/R0FHiiUBaLlpkAgH5x06icTJjbPGtRxv4RVU8pk3pQsdFow9nS5EDihFz4_p2f2JrjoPYalRpa_WbudAZR3v1AmITA8o4Pc
-    " alt="Star" width="30" height="30">
-    <img src="https://clipartart.com/images/clipart-star-image-14.png
-    " alt="Star" width="30" height="30">
-    <img src="https://clipartart.com/images/clipart-star-image-14.png
-    " alt="Star" width="30" height="30">
-     </td>
+          <td>⭐⭐⭐⭐⭐</td>
         </tr>
     <tr>
       <td>Wordpress</td>
-      <td><img src="https://lh3.googleusercontent.com/proxy/R0FHiiUBaLlpkAgH5x06icTJjbPGtRxv4RVU8pk3pQsdFow9nS5EDihFz4_p2f2JrjoPYalRpa_WbudAZR3v1AmITA8o4Pc
-    " alt="Star" width="30" height="30">
-    <img src="https://lh3.googleusercontent.com/proxy/R0FHiiUBaLlpkAgH5x06icTJjbPGtRxv4RVU8pk3pQsdFow9nS5EDihFz4_p2f2JrjoPYalRpa_WbudAZR3v1AmITA8o4Pc
-    " alt="Star" width="30" height="30">
-    <img src="https://lh3.googleusercontent.com/proxy/R0FHiiUBaLlpkAgH5x06icTJjbPGtRxv4RVU8pk3pQsdFow9nS5EDihFz4_p2f2JrjoPYalRpa_WbudAZR3v1AmITA8o4Pc
-    " alt="Star" width="30" height="30">
-    <img src="https://clipartart.com/images/clipart-star-image-14.png
-    " alt="Star" width="30" height="30">
-    <img src="https://clipartart.com/images/clipart-star-image-14.png
-    " alt="Star" width="30" height="30">
-    </td>
+      <td>⭐⭐</td>
     </tr>
     <tr>
       <td>UML</td>
-      <td><img src="https://lh3.googleusercontent.com/proxy/R0FHiiUBaLlpkAgH5x06icTJjbPGtRxv4RVU8pk3pQsdFow9nS5EDihFz4_p2f2JrjoPYalRpa_WbudAZR3v1AmITA8o4Pc
-    " alt="Star" width="30" height="30">
-    <img src="https://lh3.googleusercontent.com/proxy/R0FHiiUBaLlpkAgH5x06icTJjbPGtRxv4RVU8pk3pQsdFow9nS5EDihFz4_p2f2JrjoPYalRpa_WbudAZR3v1AmITA8o4Pc
-    " alt="Star" width="30" height="30">
-    <img src="https://clipartart.com/images/clipart-star-image-14.png
-    " alt="Star" width="30" height="30">
-    <img src="https://clipartart.com/images/clipart-star-image-14.png
-    " alt="Star" width="30" height="30">
-    <img src="https://clipartart.com/images/clipart-star-image-14.png
-    " alt="Star" width="30" height="30">
-    </td>
+      <td>⭐⭐⭐</td>
     </tr>
     <tr>
       <td>Singleton Pattern</td>
-      <td><img src="https://lh3.googleusercontent.com/proxy/R0FHiiUBaLlpkAgH5x06icTJjbPGtRxv4RVU8pk3pQsdFow9nS5EDihFz4_p2f2JrjoPYalRpa_WbudAZR3v1AmITA8o4Pc
-    " alt="Star" width="30" height="30">
-    <img src="https://lh3.googleusercontent.com/proxy/R0FHiiUBaLlpkAgH5x06icTJjbPGtRxv4RVU8pk3pQsdFow9nS5EDihFz4_p2f2JrjoPYalRpa_WbudAZR3v1AmITA8o4Pc
-    " alt="Star" width="30" height="30">
-    <img src="https://lh3.googleusercontent.com/proxy/R0FHiiUBaLlpkAgH5x06icTJjbPGtRxv4RVU8pk3pQsdFow9nS5EDihFz4_p2f2JrjoPYalRpa_WbudAZR3v1AmITA8o4Pc
-    " alt="Star" width="30" height="30">
-    <img src="https://lh3.googleusercontent.com/proxy/R0FHiiUBaLlpkAgH5x06icTJjbPGtRxv4RVU8pk3pQsdFow9nS5EDihFz4_p2f2JrjoPYalRpa_WbudAZR3v1AmITA8o4Pc
-    " alt="Star" width="30" height="30">
-    <img src="https://clipartart.com/images/clipart-star-image-14.png
-    " alt="Star" width="30" height="30">
-    </td>
+      <td>⭐⭐⭐⭐⭐</td>
     </tr>
     <tr>
       <td>Scrum</td>
-      <td><img src="https://lh3.googleusercontent.com/proxy/R0FHiiUBaLlpkAgH5x06icTJjbPGtRxv4RVU8pk3pQsdFow9nS5EDihFz4_p2f2JrjoPYalRpa_WbudAZR3v1AmITA8o4Pc
-    " alt="Star" width="30" height="30">
-    <img src="https://lh3.googleusercontent.com/proxy/R0FHiiUBaLlpkAgH5x06icTJjbPGtRxv4RVU8pk3pQsdFow9nS5EDihFz4_p2f2JrjoPYalRpa_WbudAZR3v1AmITA8o4Pc
-    " alt="Star" width="30" height="30">
-    <img src="https://lh3.googleusercontent.com/proxy/R0FHiiUBaLlpkAgH5x06icTJjbPGtRxv4RVU8pk3pQsdFow9nS5EDihFz4_p2f2JrjoPYalRpa_WbudAZR3v1AmITA8o4Pc
-    " alt="Star" width="30" height="30">
-    <img src="https://clipartart.com/images/clipart-star-image-14.png
-    " alt="Star" width="30" height="30">
-    <img src="https://clipartart.com/images/clipart-star-image-14.png
-    " alt="Star" width="30" height="30">
-    </td>
+      <td>⭐</td>
     </tr>
     <tr>
       <td>SEO</td>
-      <td><img src="https://lh3.googleusercontent.com/proxy/R0FHiiUBaLlpkAgH5x06icTJjbPGtRxv4RVU8pk3pQsdFow9nS5EDihFz4_p2f2JrjoPYalRpa_WbudAZR3v1AmITA8o4Pc
-    " alt="Star" width="30" height="30">
-    <img src="https://lh3.googleusercontent.com/proxy/R0FHiiUBaLlpkAgH5x06icTJjbPGtRxv4RVU8pk3pQsdFow9nS5EDihFz4_p2f2JrjoPYalRpa_WbudAZR3v1AmITA8o4Pc
-    " alt="Star" width="30" height="30">
-    <img src="https://lh3.googleusercontent.com/proxy/R0FHiiUBaLlpkAgH5x06icTJjbPGtRxv4RVU8pk3pQsdFow9nS5EDihFz4_p2f2JrjoPYalRpa_WbudAZR3v1AmITA8o4Pc
-    " alt="Star" width="30" height="30">
-    <img src="https://clipartart.com/images/clipart-star-image-14.png
-    " alt="Star" width="30" height="30">
-    <img src="https://clipartart.com/images/clipart-star-image-14.png
-    " alt="Star" width="30" height="30">
-    </td>
+      <td>⭐⭐⭐</td>
     </tr>
     <tr>
       <td>SASS / SCSS</td>
-      <td><img src="https://lh3.googleusercontent.com/proxy/R0FHiiUBaLlpkAgH5x06icTJjbPGtRxv4RVU8pk3pQsdFow9nS5EDihFz4_p2f2JrjoPYalRpa_WbudAZR3v1AmITA8o4Pc
-    " alt="Star" width="30" height="30">
-    <img src="https://lh3.googleusercontent.com/proxy/R0FHiiUBaLlpkAgH5x06icTJjbPGtRxv4RVU8pk3pQsdFow9nS5EDihFz4_p2f2JrjoPYalRpa_WbudAZR3v1AmITA8o4Pc
-    " alt="Star" width="30" height="30">
-    <img src="https://lh3.googleusercontent.com/proxy/R0FHiiUBaLlpkAgH5x06icTJjbPGtRxv4RVU8pk3pQsdFow9nS5EDihFz4_p2f2JrjoPYalRpa_WbudAZR3v1AmITA8o4Pc
-    " alt="Star" width="30" height="30">
-    <img src="https://lh3.googleusercontent.com/proxy/R0FHiiUBaLlpkAgH5x06icTJjbPGtRxv4RVU8pk3pQsdFow9nS5EDihFz4_p2f2JrjoPYalRpa_WbudAZR3v1AmITA8o4Pc
-    " alt="Star" width="30" height="30">
-    <img src="https://clipartart.com/images/clipart-star-image-14.png
-    " alt="Star" width="30" height="30">
-    </td>
+      <td>⭐⭐⭐⭐</td>
     </tr>
     <tr>
       <td>MVC Pattern</td>
-      <td><img src="https://lh3.googleusercontent.com/proxy/R0FHiiUBaLlpkAgH5x06icTJjbPGtRxv4RVU8pk3pQsdFow9nS5EDihFz4_p2f2JrjoPYalRpa_WbudAZR3v1AmITA8o4Pc
-    " alt="Star" width="30" height="30">
-    <img src="https://lh3.googleusercontent.com/proxy/R0FHiiUBaLlpkAgH5x06icTJjbPGtRxv4RVU8pk3pQsdFow9nS5EDihFz4_p2f2JrjoPYalRpa_WbudAZR3v1AmITA8o4Pc
-    " alt="Star" width="30" height="30">
-    <img src="https://clipartart.com/images/clipart-star-image-14.png
-    " alt="Star" width="30" height="30">
-    <img src="https://clipartart.com/images/clipart-star-image-14.png
-    " alt="Star" width="30" height="30">
-    <img src="https://clipartart.com/images/clipart-star-image-14.png
-    " alt="Star" width="30" height="30">
-    </td>
+      <td>⭐</td>
     </tr>
       </table></td>
     </tr>
